fix display on mobile

--- a/_src/_includes/_assets/css/core.css
+++ b/_src/_includes/_assets/css/core.css
@@ -1411,6 +1411,15 @@ footer {
   .img-ticker {
     animation: ticker 20s linear infinite;
   }
+
+  #subscribe_button {
+    font-size: 16px;
+    margin: 5px 0;
+  }
+  
+  #subscribe_input {
+    font-size: 16px;
+  }
 }
 
 #aside {
